# server/swagger_server/controllers/reviews_controller.py
@@ -10,6 +10,27 @@ from swagger_server import db
 from swagger_server import util
 
 
+def review_movie_id_get(id_, sort_type_reviews=None, sort_order=None):  # noqa: E501
+    id = id_
+    try:
+        L = []
+        if (sort_type_reviews == "Recent"):
+            L = (sorted(db.getReviews_forMovie(db.getMovie(id)),
+                        key=lambda x: x.creation_time, reverse=True))
+        elif (sort_type_reviews == "Likes"):
+            L = (sorted(db.getReviews_forMovie(db.getMovie(id)),
+                        key=lambda x: sum(x.likes.values()), reverse=True))
+        elif (sort_type_reviews == None):
+            L = db.getReviews_forMovie(db.getMovie(id))
+        else:
+            raise TypeError
+        if (sort_order):
+            L.reverse()
+        return (L, 200)
+    except Exception as err:
+        return (f'Error: {err}', 400)
+
+
 def review_post(movie_id, show_id, user_id, rating, title, content, creation_time):  # noqa: E501
     movie_id = json.loads(movie_id)
     show_id = json.loads(show_id)
@@ -24,6 +45,13 @@ def review_post(movie_id, show_id, user_id, rating, title, content, creation_tim
         else:
             raise TypeError
         return ("Review added successfully", 200)
+    except Exception as err:
+        return (f'Error: {err}', 400)
+
+
+def review_review_id_comment_get(review_id):  # noqa: E501
+    try:
+        return (db.getComments_fromReview(db.getReview(review_id)), 200)
     except Exception as err:
         return (f'Error: {err}', 400)
 
@@ -46,23 +74,22 @@ def review_review_id_likes_put(review_id, user_id):  # noqa: E501
         return (f'Error: {err}', 400)
 
 
-def review_title_id_get(id, sort_type_reviews=None, sort_order=None):  # noqa: E501
+def review_tvshow_id_get(id_, sort_type_reviews=None, sort_order=None):  # noqa: E501
+    id = id_
     try:
-        id = json.loads(id)
-        if (id['show_id'] is None):
-            id = MovieId.from_dict(id['movie_id'])
-        elif (id['movie_id'] is None):
-            id = ShowId.from_dict(id['show_id'])
+        L = []
+        if (sort_type_reviews == "Recent"):
+            L = sorted(db.getReviews_forShow(db.getTvshow(id)),
+                       key=lambda x: x.creation_time, reverse=True)
+        elif (sort_type_reviews == "Likes"):
+            L = sorted(db.getReviews_forShow(db.getTvshow(id)),
+                       key=lambda x: sum(x.likes.values()), reverse=True)
+        elif (sort_type_reviews == None):
+            L = db.getReviews_forShow(db.getTvshow(id))
         else:
             raise TypeError
-        L = []
-        if (sort_type_reviews is None):
-            if (isinstance(id, MovieId)):
-                L = db.getReviews_forMovie(db.getMovie(id.id))
-            else:
-                L = db.getReviews_forTvshow(db.getTvshow(id.id))
-        else:
-            L = db.sortReviewTitle(id, sort_type_reviews, sort_order)
+        if (sort_order):
+            L.reverse()
         return (L, 200)
     except Exception as err:
         return (f'Error: {err}', 400)
@@ -71,12 +98,5 @@ def review_title_id_get(id, sort_type_reviews=None, sort_order=None):  # noqa: E
 def review_user_user_id_get(user_id, sort_type_reviews=None, sort_order=None):  # noqa: E501
     try:
         return (db.sortReviewUser(user_id, sort_type_reviews, sort_order), 200)
-    except Exception as err:
-        return (f'Error: {err}', 400)
-
-
-def review_review_id_comment_get(review_id):  # noqa: E501
-    try:
-        return (db.getComments_fromReview(db.getReview(review_id)), 200)
     except Exception as err:
         return (f'Error: {err}', 400)
