# server/swagger_server/models/__init__.py
@@ -11,5 +11,10 @@ from swagger_server.models.show_id import ShowId
 from swagger_server.models.title import Title
 from swagger_server.models.tvshow import Tvshow
 from swagger_server.models.user import User
+from swagger_server.models.user_id_bio_body import UserIdBioBody
+from swagger_server.models.user_id_interests_body import UserIdInterestsBody
+from swagger_server.models.user_id_password_body import UserIdPasswordBody
+from swagger_server.models.user_id_pfp_body import UserIdPfpBody
+from swagger_server.models.user_id_username_body import UserIdUsernameBody
 from swagger_server.models.user_signin_body import UserSigninBody
 from swagger_server.models.user_signup_body import UserSignupBody
