# server/swagger_server/models/user_id_interests_body.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class UserIdInterestsBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, interests: List[str]=None):  # noqa: E501
+        """UserIdInterestsBody - a model defined in Swagger
+
+        :param interests: The interests of this UserIdInterestsBody.  # noqa: E501
+        :type interests: List[str]
+        """
+        self.swagger_types = {
+            'interests': List[str]
+        }
+
+        self.attribute_map = {
+            'interests': 'interests'
+        }
+        self._interests = interests
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserIdInterestsBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The user_id_interests_body of this UserIdInterestsBody.  # noqa: E501
+        :rtype: UserIdInterestsBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def interests(self) -> List[str]:
+        """Gets the interests of this UserIdInterestsBody.
+
+
+        :return: The interests of this UserIdInterestsBody.
+        :rtype: List[str]
+        """
+        return self._interests
+
+    @interests.setter
+    def interests(self, interests: List[str]):
+        """Sets the interests of this UserIdInterestsBody.
+
+
+        :param interests: The interests of this UserIdInterestsBody.
+        :type interests: List[str]
+        """
+        if interests is None:
+            raise ValueError("Invalid value for `interests`, must not be `None`")  # noqa: E501
+
+        self._interests = interests
